# RealEval-v2

./: .gitignore  LICENSE  README.md  RUNPOD_TEST_LOG.md  pyproject.toml  quickstart_runpod.ipynb  requirements.txt  run.sh  run_h100.sh  setup.sh
claims/: claim_001_latency.yaml  claim_002_accuracy.yaml  claim_003_specdec.yaml  claim_004_privacy.yaml  claim_01_ovfreeze.yaml  claim_02_quantization.yaml  claim_03_specdec.yaml
cluster/: download_assets.sh  launch_ddp.sh  launch_h100.sh  launch_runpod_h100.sh  setup_runpod.sh  slurm_h100.sbatch  stage_models.sh  train_sft.py
config/: experiments.yaml  h100.yaml  runpod_h100.yaml
data/: advfraud_3k_compiled.json
data/AdvFraud3k/: advfraud3k.json  advfraud3k_expert.json
data/ChiFraud/: chifraud.npz
data/TAF28k/: taf28k.jsonl
data/balanced10c/: balanced10c.jsonl
data/balanced4k/: balanced4k.jsonl
data/balanced600/: balanced600.jsonl
data/scripts/: build_advfraud3k.py  build_audio_npz.py  prep_datasets.py
data/spam11358/: spam11358.jsonl
docs/datasets/: TAF28k_metadata.json
docs/figure_scripts/: QAD_MultiGuard_v9_图表核对修改说明.md  fig1_architecture.py  fig2_acoustic_embedding.py  fig3_main_results.py  fig4_loss_convergence.py  fig5_loss_teacher_ablation.py  fig6_ovf_ablation.py  fig7_speculative_decoding.py  fig8_revision_ablations.py  (+4 more)
experiments/: __init__.py  claim_engine.py  exp10_teacher_scale.py  exp11_quantization_scheme.py  exp12_fraudfusion_baseline.py  exp13_fusion_strategy.py  exp14_gguf_comparison.py  exp1_qad_production.py  exp2_qad_loss_ablation.py  exp3_ov_freeze_control.py  exp4_baseline_comparison.py  exp5_cross_dataset.py  exp6_speculative_decoding.py  exp7_privacy_verification.py  exp8_latency_benchmark.py  exp9_cot_ablation.py  paper_pipeline.py  runner.py  sync_audit.py  train_ovfreeze_paper.py
realeval/: __init__.py  audit.py  benchmark.py  data.py  distill.py  distributed.py  envreport.py  gguf_backend.py  hwenv.py  io.py  limits.py  metrics.py  models.py  paths.py  privacy.py  real_backend.py  report.py  runlog.py  runner.py  specdec.py  statistics.py  validation.py
scripts/: entrypoint.sh
template/: README.md  docker-compose.yml  run_all.sh
tests/: test_figure_pipeline_alignment.py  test_hf_data.py  test_realeval.py
(+17 files in other folders)
